--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@11ty/eleventy": "^1.0.1",
     "concurrently": "^7.3.0",
+    "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-image-lazy-loading": "^1.2.0",
     "sass": "^1.54.0"
