--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@11ty/eleventy": "^1.0.1",
     "concurrently": "^7.3.0",
     "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.4",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-image-lazy-loading": "^1.2.0",
     "sass": "^1.54.0"
