--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@11ty/eleventy-navigation": "^0.3.5",
     "concurrently": "^7.5.0",
     "eleventy-plugin-toc": "^1.1.5",
+    "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-image-lazy-loading": "^1.2.0",
-    "sass": "^1.55.0"
+    "sass": "^1.56.1"
   }
 }
